# kind-openai

./: Cargo.toml  README.md
.github/workflows/: rust.yml
crates/kind-openai/: Cargo.toml
crates/kind-openai/examples/: basic.rs
crates/kind-openai/src/: auth.rs  endpoints.rs  error.rs  lib.rs  util.rs
crates/kind-openai/src/endpoints/: chat.rs  chat_reasoning.rs  embeddings.rs
crates/kind-openai/src/endpoints/chat/: standard.rs  structured.rs
crates/kind-openai/tests/: complex_schema.rs
crates/macros/kind-openai-schema/: Cargo.toml
crates/macros/kind-openai-schema-impl/: Cargo.toml
crates/macros/kind-openai-schema-impl/src/: enum_gen.rs  lib.rs  struct_gen.rs  utils.rs
crates/macros/kind-openai-schema-impl/src/struct_gen/: field.rs
crates/macros/kind-openai-schema/src/: lib.rs
