[package]
name = "kind-openai"
version = "0.1.9"
edition = "2021"
description = "Highly opinionated OpenAI API wrapper crate. By Kindness Inc."
license = "MIT"
homepage = "https://github.com/Kindness-Works/kind-openai"
repository = "https://github.com/Kindness-Works/kind-openai"
readme = "../../README.md"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
thiserror = "1.0.63"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.26"
kind-openai-schema = "0.1.6"

[dev-dependencies]
tokio = { version = "1.39.3", features = ["full"] }