[package]
name = "kind-openai-schema"
version = "0.2.0"
edition = "2021"
description = "OpenAI schema generation macro public library"
license = "MIT"
homepage = "https://github.com/Kindness-Works/kind-openai"
repository = "https://github.com/Kindness-Works/kind-openai"

[dependencies]
kind-openai-schema-impl = "0.2.0"
serde = "1.0.205"
serde_json = { version = "1.0.122", features = ["raw_value"] }
